--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+html,
+body,
+#root {
+  @apply bg-slate-900;
+}
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
@@ -24,4 +28,13 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+}
+::-webkit-scrollbar {
+  @apply w-2 h-3;
+}
+::-webkit-scrollbar-thumb {
+  @apply rounded-xl bg-slate-600;
+}
+::-webkit-scrollbar-track {
+  @apply bg-transparent;
 }
